# bessyii-dashboard

./: .gitignore  estimated_angles_2c3672a4-4a3e-4b4b-b4ec-c406e397352f.nc  estimated_angles_3b188a45-6702-4724-ab53-ec4091bef411.nc  estimated_angles_4696671f-09f5-4304-98aa-e0798c8dae2b.nc  estimated_angles_4dd1b7b0-7ecb-44d3-8f54-3611cd4cafc1.nc  estimated_angles_501e2ef2-4dc6-45fc-8da8-3ab794e2d0ec.nc  estimated_angles_645a00df-7753-4dc0-9b17-f27340b1df83.nc  estimated_angles_7837a721-ae83-4088-923f-37e805d62d57.nc  estimated_angles_97cb14cb-1d68-420d-b24e-e176dae2e0af.nc  estimated_angles_a027fdb1-987d-46b6-ac0b-036900bb26ce.nc  estimated_angles_b574cc6d-7576-409d-b787-fa86a817a6c5.nc  estimated_angles_be3c76c5-4ca1-4ace-ad5c-1706d870b875.nc  estimated_angles_be6d32bf-eb8c-4eb1-a6d6-5b4dec846911.nc  estimated_angles_c37f5517-8c68-4b6a-9217-ccf80de50f4b.nc  main.py  offsets_2c3672a4-4a3e-4b4b-b4ec-c406e397352f.nc  offsets_3b188a45-6702-4724-ab53-ec4091bef411.nc  offsets_4696671f-09f5-4304-98aa-e0798c8dae2b.nc  offsets_4dd1b7b0-7ecb-44d3-8f54-3611cd4cafc1.nc  offsets_501e2ef2-4dc6-45fc-8da8-3ab794e2d0ec.nc  offsets_645a00df-7753-4dc0-9b17-f27340b1df83.nc  offsets_7837a721-ae83-4088-923f-37e805d62d57.nc  offsets_97cb14cb-1d68-420d-b24e-e176dae2e0af.nc  offsets_a027fdb1-987d-46b6-ac0b-036900bb26ce.nc  offsets_b574cc6d-7576-409d-b787-fa86a817a6c5.nc  offsets_be3c76c5-4ca1-4ace-ad5c-1706d870b875.nc  offsets_be6d32bf-eb8c-4eb1-a6d6-5b4dec846911.nc  offsets_c37f5517-8c68-4b6a-9217-ccf80de50f4b.nc  preprocessed_measurement_data_2c3672a4-4a3e-4b4b-b4ec-c406e397352f.nc  (+13 more)
(+10 files in other folders)
